# fundus-camera-watchdog

./: .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
.github/workflows/: build.yml
docs/source/: conf.py  index.rst
src/fundus_camera_watchdog/: camera_watchdog.py  main.py
tests/: conftest.py  constants.py  test_api_client.py  test_camera_db.py  test_camera_watchdog.py  test_config.py  test_db_column_map.py  test_subject_files.py  test_subject_folder_pattern.py  test_utils.py
