[project]
name = "fundus-camera-watchdog"
version = "0.2.0"
description = "File watchdog for fundus camera"
readme = "README.rst"
requires-python = '>=3.12,<3.15'
dependencies = [
    "requests>=2.34.2",
    "tzdata>=2026.2",
    "watchdog>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/erikvw/fundus-camera-watchdog"

[project.scripts]
fundus-camera-watchdog = "fundus_camera_watchdog.camera_watchdog:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
docs = [
    "furo>=2025.12.19",
    "sphinx>=9.1.0",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
source-exclude = ["bin"]
namespace = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 95
indent-width = 4
target-version = "py312"
exclude = [".tox", ".venv"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "C90",
    "COM",
    "DTZ",
    "E",
    "F",
    "FA",
    "FURB",
    "I",
    "INT",
    "N",
    "PERF",
    "PL",
    "PLR",
    "PTH",
    "RET",
    "RUF",
    # "S",
    "SIM",
    "T20",
    "TRY",
    "UP",
    "W",
]
